--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,10 @@ ol, ul{
 /* NAV START */
 .main-nav{
 
+    position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: 100000;
     .container, .main-menu{
         display: flex;
         align-items: center;
@@ -126,6 +130,8 @@ ol, ul{
         
         position: absolute;
         right: 0rem;
+
+        transform: translateX(-50%);
     }
 
     .container{
@@ -205,6 +211,9 @@ ol, ul{
         .dark-mode{
             right: 4rem;
         }
+        .menu-btn{
+            transform: translateX(0%);
+        }
         
          
     }
@@ -237,4 +246,163 @@ ol, ul{
 }
 /* NAV END */
 
+
+/* HERO START */
+
+.hero-page{
+    background-image: linear-gradient(to top, rgba(99, 101, 241, 0.1), rgba(219, 70, 239, 0.05), rgba(241, 244, 253, 0.07));
+    padding-top: 4rem;
+    .hero-title{
+        color: var(--gray-900);
+        font-size: 2.125rem;
+        font-weight: 800;
+        line-height: 1.3;
+        text-align: center;
+        padding-top: 2rem;
+    }
+
+    .hero-text{
+        color: var(--gray-700);
+        font-size: 1.125rem;
+        line-height: 1.6;
+        text-align: center;
+        padding-top: 2rem;
+    }
+
+    .store-download{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding-top: 2rem;
+    }
+
+
+    .store-btn{
+        background-color: var(--gray-900);
+        padding: .5em 1rem;
+        border-radius: .5rem;
+        width: 100%;
+
+        img{
+            height: 3em;
+        }
+    }
+    
+    .more{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+
+       .discover{
+        text-decoration: none;
+        text-wrap: nowrap;
+       }
+    }
+
+    .hero-img{
+
+        display: none;
+        
+    }
+
+    @media (width <= 767px ){
+
+    }
+
+    @media (width >= 768px){
+        .container{
+            position: relative;
+        }
+
+        .hero-img{
+            display: block;
+            width: 60%;
+            
+
+            position: absolute;
+            bottom: 0;
+            right: 0;
+        }
+        .hero-text{
+            text-align: start;
+            width: 45%;
+
+        }
+        .store-download{
+            flex-direction: row;
+        }
+        
+        .hero-title{
+            font-size: 2.75rem;
+            padding-bottom: 5rem;
+            
+        }
+        .store-btn{
+            img{
+                height: 2em;
+            }
+        }
+        .more{
+            justify-content: flex-start;
+            padding-top: 4rem;
+        }
+        .hero-text{
+            width: 40%;
+        }
+        
+    }
+
+    @media (width >= 992px){
+        .hero-page{
+            
+        }
+        .hero-title{
+            
+            padding-bottom: 5rem;
+            
+        }
+        .hero-text{
+            padding-top: 1rem;
+            width: 40%;
+            padding-bottom: 10rem;
+        }
+        
+        .store-btn{
+            width: 12rem;
+        }
+        .hero-img{
+            
+        }
+    }
+
+    @media (width >= 1200px){
+        
+        .hero-title{
+            text-align: start;
+            padding-top: 10rem;
+            width: 50%;
+            font-size: 3.5rem;
+            padding-bottom: 1rem;
+        }
+        .hero-text{
+            width: 40%;
+            padding-bottom: 0;
+        }
+        
+        .store-btn{
+            width: 12rem;
+        }
+        .more{
+            margin-top: 12rem;
+        }
+        
+        .hero-img{
+            
+        }
+    }
+
+}
+/* HERO END */
 
