--- a/styles.css
+++ b/styles.css
@@ -248,7 +248,6 @@ ol, ul{
 
 
 /* HERO START */
-
 .hero-page{
     background-image: linear-gradient(to top, rgba(99, 101, 241, 0.1), rgba(219, 70, 239, 0.05), rgba(241, 244, 253, 0.07));
     padding-top: 4rem;
@@ -405,4 +404,47 @@ ol, ul{
 
 }
 /* HERO END */
+
+/* LOGOIPSUM START */
+.logos{
+    display: none;
+
+    .container{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+        padding-block: 3rem;
+    }
+
+   
+    .logo-card{
+        border: 1px solid var(--gray-300);
+        padding: 2rem;
+        border-radius: .5em;
+        display: grid;
+        place-items: center;
+    }
+    
+    @media (width >768px){
+        display: block;
+
+        .logo-card:nth-last-of-type(-n+2){
+            display: none;
+        
+        }
+    }
+
+    @media (width >1200px){
+        .container{
+            grid-template-columns: repeat(6, 1fr);
+        }
+
+        .logo-card:nth-last-of-type(-n+2){
+            display: block;
+        
+        }
+    }
+
+}
+/* LOGOIPSUM END */
 
