--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@
 
     --bg-clr-white: white;
     --bg-clr-gray: #F3F6FF;
+
+    --clr-success: #22C55E;
 }
 
 
@@ -745,3 +747,217 @@ ol, ul{
 }
 /* TESTIMONIALS END */
 
+/* FAQ START */
+.faq{
+    padding-bottom: 3rem;
+    .faq-text{
+        text-align: center;
+        padding-bottom: 3rem;
+        h2{
+            color: var(--gray-900);
+            font-size: 2rem;
+            line-height: 1.3;
+        }
+        p{
+            padding-top: 1rem;
+            color: var(--gray-700);
+            font-size: 1.125;
+            line-height: 1.6;
+        }
+    }
+    .contact-form{
+        padding-top: 3rem;
+        display: flex;
+        gap: 1rem;
+        display: none;
+    }
+    .contact-phone{
+        display: inline-flex;
+        flex-direction: column;
+        padding: 1rem;
+        gap: 1rem;
+        border: 1px solid var(--gray-300);
+        border-radius: .5rem;
+        p{
+            color: var(--gray-700);
+            font-size: 0.875rem;
+        }
+        img{
+            width: 2rem;
+        }
+        a{
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            text-decoration: none;
+            color: var(--clr-primary);
+            img{
+                width: 1rem;
+            }
+        }
+    }
+
+    .contact-message{
+        display: inline-flex;
+        flex-direction: column;
+        padding: 1rem;
+        gap: 1rem;
+        border: 1px solid var(--gray-300);
+        border-radius: .5rem;
+        p{
+            color: var(--gray-700);
+            font-size: 0.875rem;
+        }
+        img{
+            width: 2rem;
+        }
+        a{
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            text-decoration: none;
+            color: var(--clr-success);
+            
+            img{
+                width: 1rem;
+            }
+        }
+    }
+
+    .question-card{
+        border-radius: .5em;
+        .question-first{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 2rem;
+            border: 1px solid var(--gray-300);
+            background-color: white;
+            color: var(--gray-900);
+            font-weight: 500;
+            padding: 1rem;
+            font-size: 1rem;
+            /* box-shadow: 0 3px 7px 2px var(--gray-300); */
+            border-radius: .5em .5em 0 0;
+            width: 100%;
+            cursor: pointer;
+
+            img{
+                width: 2.5rem;
+            }
+            
+        }
+    .answer{
+        border: 1px solid var(--gray-300);
+        padding: 1rem;
+        color: var(--gray-700);
+        font-size: 0.875;
+    }
+    .question-last{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+        border: 1px solid var(--gray-300);
+        background-color: white;
+        color: var(--gray-900);
+        font-weight: 500;
+        padding: 1rem;
+        font-size: 1rem;
+        /* box-shadow: 0 3px 7px 2px var(--gray-300); */
+        border-radius: 0 0 .5em .5em;
+        width: 100%;
+        cursor: pointer;
+        
+        img{
+            width: 2.5rem;
+        }
+    }
+    .question{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+        border: 1px solid var(--gray-300);
+        background-color: white;
+        color: var(--gray-900);
+        font-weight: 500;
+        padding: 1rem;
+        font-size: 1rem;
+        /* box-shadow: 0 3px 7px 2px var(--gray-300); */
+        
+        width: 100%;
+        cursor: pointer;
+
+        img{
+            width: 2.5rem;
+        }
+    }
+        
+    }
+    .contact-us-btn{
+        display: flex;
+        font-size: 0.875rem;
+       
+        align-items: center;
+        justify-content: center;
+        background-color: var(--clr-primary);
+        text-decoration: none;
+        color: white;
+        text-wrap: nowrap;
+        padding: 1em 1em;
+        border-radius: .3rem;
+        width: 9rem;
+        margin-top: 2rem;
+    }
+    .flex-center{
+        display: flex;
+        justify-content: center;
+    }
+
+    @media (width >= 768px){
+        .accordion{
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+        .question-card{
+            border: none;
+            box-shadow: 0 3px 7px 2px var(--gray-300);
+            border-radius: .5em;
+            .answer{
+                border: hidden;
+            }
+        }
+        .question-first{
+            border: none !important;
+        }
+        .question{
+            border: none !important;
+            box-shadow: 0 3px 7px 2px var(--gray-300);
+            border-radius: .5em;
+        }
+        .question-last{
+            border-radius: .5em !important;
+            border: none !important;
+        }
+        .contact-us-btn{
+            display: none;
+        }
+        .contact-form{
+            display: flex;
+            flex-direction: row;
+            
+            .contact-message{
+                width: 50%;
+            }
+            .contact-phone{
+                width: 50%;
+            }
+        }
+
+
+        
+    }
+
+}
