--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
 
     --active-clr-primary: hsl(239, 94%, 67%);
 
+    --bg-clr--dm-light: #151922;
+
     --gray-100: #F3F6FF;
     --gray-200: #EFF2FC;
     --gray-300: #E2E5F1;
@@ -16,6 +18,8 @@
     --gray-700: #565973;
     --gray-800: #33354D;
     --gray-900: #0B0F19;
+
+    --icon-bg-clr:hsl(235, 30%, 15%);
 
     --bg-clr-white: white;
     --bg-clr-gray: #F3F6FF;
@@ -95,10 +99,16 @@ ol, ul{
         align-items: center;
         
     }
+    .dm-logo{
+        display: none;
+    }
 
     .main-menu{
         width: 100%;
         justify-content: space-between;
+    }
+    .dm-hamburger{
+        display: none;
     }
 
     .btn-login{
@@ -153,6 +163,8 @@ ol, ul{
         right: 0rem;
 
         transform: translateX(-50%);
+        cursor: pointer;
+        
     }
 
     .container{
@@ -270,6 +282,7 @@ ol, ul{
 
 /* HERO START */
 .hero-page{
+    
     background-image: linear-gradient(to top, rgba(99, 101, 241, 0.1), rgba(219, 70, 239, 0.05), rgba(241, 244, 253, 0.07));
     padding-top: 4rem;
     .hero-title{
@@ -307,6 +320,12 @@ ol, ul{
             height: 3em;
         }
     }
+    .dm-appstore{
+        display: none;
+    }
+    .dm-googleplay{
+        display: none;
+    }
     
     .more{
         display: flex;
@@ -321,6 +340,9 @@ ol, ul{
         text-wrap: nowrap;
        }
        
+    }
+    .dm-more{
+        display: none;
     }
 
     .hero-img{
@@ -431,6 +453,7 @@ ol, ul{
 /* LOGOIPSUM START */
 .logos{
     display: none;
+    background-color: var(--bg-clr-white);
 
     .container{
         display: grid;
@@ -474,6 +497,7 @@ ol, ul{
 /* FEATURE START */
 .features{
     text-align: center;
+    background-color: var(--bg-clr-white);
     
 
     .feature-img{
@@ -752,6 +776,9 @@ ol, ul{
         display: flex;
         padding-bottom: 3rem;
     }
+    .dm-testimonials{
+        display: none;
+    }
 
     .testimonials-title{
         color: var(--gray-900);
@@ -775,6 +802,7 @@ ol, ul{
 /* FAQ START */
 .faq{
     padding-bottom: 3rem;
+    background-color: var(--bg-clr-white);
     .faq-text{
         text-align: center;
         padding-bottom: 3rem;
@@ -930,6 +958,9 @@ ol, ul{
             width: 2.5rem;
         }
     }
+    .dm-arrow{
+        display: none;
+    }
         
     }
     .contact-us-btn{
@@ -965,19 +996,21 @@ ol, ul{
             .answer{
                 border: hidden;
             }
+            .question-first{
+                border: none;
+            }
+            .question{
+                border: none ;
+                box-shadow: 0 3px 7px 2px var(--gray-300);
+                border-radius: .5em;
+            }
+            .question-last{
+                border-radius: .5em;
+                border: none;
+            }
         }
-        .question-first{
-            border: none !important;
-        }
-        .question{
-            border: none !important;
-            box-shadow: 0 3px 7px 2px var(--gray-300);
-            border-radius: .5em;
-        }
-        .question-last{
-            border-radius: .5em !important;
-            border: none !important;
-        }
+        
+        
         .contact-us-btn{
             display: none;
         }
@@ -1053,6 +1086,7 @@ ol, ul{
 /* NEWSLETTER START */
 .newsletter{
     padding-bottom: 2rem;
+    background-color: var(--bg-clr-white);
     .newsletter-container{
         display: flex;
         align-items: center;
@@ -1151,6 +1185,9 @@ ol, ul{
         .newsletter-text-desktop{
             display: block;
         }
+        .newsletter-container{
+            padding-inline: 4rem;
+        }
     }
 }
 /* NEWSLETTER END */
@@ -1158,6 +1195,7 @@ ol, ul{
 /* ALL RIGHTS RESERVED START */
 .all-rights-reserved{
     padding-bottom: 2rem;
+    background-color: var(--bg-clr-white);
     .all-right-text{
         color: var(--gray-600);
         font-size: 0.875rem;
@@ -1165,3 +1203,182 @@ ol, ul{
     }
 }
 /* ALL RIGHTS RESERVED END */
+
+/* DARKMODE START */
+.dark{
+    --bg-clr-white: var(--gray-900);
+    --bg-clr-gray: var(--gray-800);
+    .main-nav{
+        a{
+            color: white;
+        }
+        .dm-logo{
+            display: block;
+        }
+        .light-logo{
+            display: none;
+        }
+        .light-hamburger{
+            display: none;
+        }
+        .dm-hamburger{
+            display: block;
+        }
+
+    }
+    .hero-page{
+        background-color: var(--gray-900);
+        .hero-title{
+            color: white;
+        }
+        .hero-text{
+            color: var(--gray-500);
+        }
+        .store-btn{
+            background-color: var(--gray-200);
+            
+        }
+        .more{
+            color: var(--gray-500);
+        }
+        .dm-appstore{
+            display: block;
+        }
+        .light-appstore{
+            display: none;
+        }
+        .light-googleplay{
+            display: none;
+        }
+        .dm-googleplay{
+            display: block;
+        }
+        .light-more{
+            display: none;
+        }
+        .dm-more{
+            display: block;
+        }
+
+    }
+    .logo-card{
+        border: 1px solid var(--gray-800);
+        
+    }
+    .features{
+        .feature-text{
+            h2{
+                color: white;
+            }
+        }
+        .feature-card{
+            h3{
+                color: white;
+            }
+            p{
+                color: var(--gray-500);
+            }
+        }
+        .icon-container{
+            background-color: var(--icon-bg-clr);
+        }
+    }
+    .how-does-it-work{
+        background-color: var(--bg-clr--dm-light);
+        .hdiw-title{
+            color: white;
+        }
+        .hdiw-bottom-text{
+            h3{
+                color: white;
+            }
+            p{
+                color: var(--gray-600);
+            }
+        }
+    }
+    .feature-2{
+        .content-container{
+            h2{
+                color: white;
+            }
+            li{
+                color: var(--gray-600);
+            }
+        }
+        .content-container2{
+            h2{
+                color: white;
+            }
+            .icon-container{
+                background-color: var(--icon-bg-clr);
+            }
+            
+            p{
+                color: var(--gray-600)
+            }
+            
+            
+        }
+        
+    }
+    .testimonials{
+        background-color: var(--bg-clr--dm-light);
+        h2{
+            color: white;
+        }
+        .light-testimonials{
+            display: none;
+        }
+        .dm-testimonials{
+            display: block;
+        }
+    }
+    .faq{
+        h2{
+            color: white;
+        }
+        p{
+            color: var(--gray-600)
+        }
+        
+        .question-card{
+            box-shadow: none;
+            
+            .question, .question-first, .question-last{
+                background-color: #151922;
+                box-shadow: none;
+                color: white;
+                
+                
+                &:hover{
+                    background-color: var(--gray-700);
+                }
+            }
+        }
+        
+        .light-arrow{
+            display: none;
+        }
+        .dm-arrow{
+            display: block;
+        }
+    }
+    .newsletter{
+        .newsletter-container{
+            background-color: #151922;
+        }
+        h3{
+            color: white;
+        }
+        .newsletter-input{
+            background-color: #151922;
+            border: 1px solid var(--gray-700);
+            
+        }
+        .newsletter-input::placeholder{
+            color: var(--gray-600);
+        }
+    }
+}
+/* DARKMODE END */
